tdf#144106 Don't proceed ptrim_i past ptrim_f

...which would cause p2 - p1 to be negative in lcl_appendLineData and thus
construction of a std::u16string_view with a huge positive length of type
size_t.  In 64-bit builds where size_t is 64-bit, that would then cause
termination due to an uncaught std::bad_alloc.  But in (implicitly)
--disable-assert-always-abort 32-bit builds where size_t is 32-bit, this would
silently have worked before 1efec9ec21dba32335e311d367b636538e219621 "Tighten
rtl_{string,uString}_newFromStr_WithLength implementation", when the huge
positive size_t value was cast back to a negative sal_Int32 that was gracefully
handled by rtl_uString_newFromStr_WithLength.

Change-Id: I3b95a9fce62b99ffc150f76a1c6ccddcdacdae0e